fixed arrow highlight hover: now hover stays yellow when there are more entries useful on mobile devices

--- a/src/app/css/toolstyle.css
+++ b/src/app/css/toolstyle.css
@@ -431,6 +431,15 @@ ul#optionsMenu > li:hover .aboutMenu {
 	content: "<";
 }
 
+a#LeftButton.highlighted:hover{
+	background-color: #d90;
+	color: white;
+}
+
+a#RightButton.highlighted:hover{
+	background-color: #d90;
+	color: white;
+}
 
 
 #searchMenuId:before{
